@@ -1,5 +1,0 @@
-application/x-terminatorX:
-	open=terminatorX %f
-	view=terminatorX %f
-	edit=terminatorX %f
-	icon-filename=/usr/local/share/pixmaps/terminatorX-mime.xpm
