@@ -14,7 +14,8 @@ changed.
   WARNING: gdkxft-users: gtk2 applications segfault when preloading
   libgdk_xft.so! So unset LD_PRELOAD and set GDK_USE_XFT=1 instead.
 - Applied a patch from Adrian that brings lots of new stuff:
-  - Debian package support  
+  - Debian package support (removed - Mike Furr now maintains an official 
+                            Debain package for terminatorX)
   - enhanced GNOME integration
   - a manpage for terminatorX
 - Included another gcc3 fix thanks to Gregor Riepl <seto-kun@freesurf.ch>
